fix: internal edge 없을때 출력되는 에러 & main에서 dot -> png 로직 삭제

--- a/result/call_graph_results/call-graph.html
+++ b/result/call_graph_results/call-graph.html
@@ -1,17 +1,16 @@
 <script src='https://unpkg.com/mermaid@8.1.0/dist/mermaid.min.js'></script>
 <div class='mermaid'>
 classDiagram
-	class Bar{
-		blockingFunction
-		f
-	}
-	class Foo{
-		foo
+	class GuessTheRandomNumber{
+		constructor
+		guess
 	}
 	class Solidity{
-		return(uint256,uint256)
+		keccak256(bytes)
+		blockhash(uint256)
+		abi.encodePacked()
 		require(bool,string)
 	}
-Foo --|> Solidity
-Foo --|> Bar
+GuessTheRandomNumber --|> Solidity
+
 </div>
