--- a/result/call_graph_results/call-graph.html
+++ b/result/call_graph_results/call-graph.html
@@ -1,14 +1,17 @@
 <script src='https://unpkg.com/mermaid@8.1.0/dist/mermaid.min.js'></script>
 <div class='mermaid'>
 classDiagram
-	class Attack{
-		constructor
-		attack
+	class TimeLock{
+		increaseLockTime
+		deposit
+		withdraw
 	}
 	class Solidity{
 		require(bool,string)
+		require(bool)
 		balance(address)
+		require(bool,string)
 	}
-Attack --|> Solidity
+TimeLock --|> Solidity
 
 </div>
