fix(audit report): audit report 출력되지 않는 문제 해결

--- a/result/call_graph_results/call-graph.html
+++ b/result/call_graph_results/call-graph.html
@@ -1,17 +1,21 @@
 <script src='https://unpkg.com/mermaid@8.1.0/dist/mermaid.min.js'></script>
 <div class='mermaid'>
 classDiagram
-	class TimeLock{
-		increaseLockTime
+	class EtherStore{
+		guess
 		deposit
+		reward
+		getBalance
 		withdraw
 	}
 	class Solidity{
 		require(bool,string)
-		require(bool)
-		balance(address)
+		keccak256(bytes)
+		abi.encodePacked()
+		blockhash(uint256)
 		require(bool,string)
+		balance(address)
 	}
-TimeLock --|> Solidity
-
+EtherStore --|> Solidity
+EtherStore --|> EtherStore
 </div>
